// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardMenu Should renders correctly 1`] = `
<DocumentFragment>
  <div
    class="menu"
    data-testid="card-menu"
  >
    <div />
    <div />
    <div />
  </div>
</DocumentFragment>
`;

exports[`CardMenu Should renders correctly with opened dropdown 1`] = `
<DocumentFragment>
  <div
    class="menu"
    data-testid="card-menu"
  >
    <div />
    <div />
    <div />
  </div>
  <div
    class="dropdown"
  >
    <div
      class="dropdown_close"
    >
      ×
    </div>
    <div
      class="dropdown_item"
    >
      Edit
    </div>
    <div
      class="dropdown_item"
    >
      Delete
    </div>
  </div>
</DocumentFragment>
`;
